--- a/include/pure64/Makefile
+++ b/include/pure64/Makefile
@@ -1,28 +1,13 @@
-DESTDIR ?=
-
-PREFIX ?= /usr/local
-
-install_files += $(DESTDIR)$(PREFIX)/include/pure64/error.h
-install_files += $(DESTDIR)$(PREFIX)/include/pure64/dir.h
-install_files += $(DESTDIR)$(PREFIX)/include/pure64/fs.h
-install_files += $(DESTDIR)$(PREFIX)/include/pure64/file.h
-install_files += $(DESTDIR)$(PREFIX)/include/pure64/path.h
-install_files += $(DESTDIR)$(PREFIX)/include/pure64/stream.h
-
-.PHONY: all
-all:
-
-.PHONY: clean
-clean:
+.PHONY: all clean test
+all clean test:
 
 .PHONY: install
-install: $(DESTDIR)$(PREFIX)/include/pure64 $(install_files)
+install: core-install lang-install
 
-$(DESTDIR)$(PREFIX)/include/pure64/%.h: %.h
-	cp $< $@
+core-install:
+	install core.h $(DESTDIR)$(PREFIX)/include/pure64/core.h
+	$(MAKE) -C core install
 
-$(DESTDIR)$(PREFIX)/include/pure64:
-	mkdir -p $@
-
-.PHONY: test
-test:
+lang-install:
+	install lang.h $(DESTDIR)$(PREFIX)/include/pure64/lang.h
+	$(MAKE) -C lang install
