renamed stage-three directory to fs-loader

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ add_subdirectory("src/lang")
 if (PURE64_WITH_BOOTLOADER)
 	message(WARNING "CMake cannot currently build the bootloader.")
 	add_subdirectory("src/arch/${PURE64_ARCH}")
-	add_subdirectory("src/stage-three")
+	add_subdirectory("src/fs-loader")
 elseif (PURE64_WITH_UTIL)
 	add_subdirectory("src/util")
 endif (PURE64_WITH_BOOTLOADER)
