--- a/src/arch/x86_64/Makefile
+++ b/src/arch/x86_64/Makefile
@@ -11,6 +11,11 @@ pure64_deps += init/smp.asm
 pure64_deps += interrupt.asm
 pure64_deps += sysvar.asm
 
+bootsectors += bootsectors/mbr.sys
+bootsectors += bootsectors/pxestart.sys
+bootsectors += bootsectors/multiboot.sys
+bootsectors += bootsectors/multiboot2.sys
+
 ARCH ?= x86_64
 
 install_dir ?= $(DESTDIR)$(PREFIX)/share/pure64/resources/$(ARCH)
@@ -18,15 +23,13 @@ install_dir ?= $(DESTDIR)$(PREFIX)/share/pure64/resources/$(ARCH)
 NASM ?= nasm
 
 .PHONY: all
-all: pure64.sys
+all: pure64.sys $(bootsectors)
 
 pure64.sys: pure64.asm $(pure64_deps)
-	@echo "NASM    $@"
-	$(NASM) $(NASMFLAGS) pure64.asm -o $@ -l pure64.lst
 
 .PHONY: clean
 clean:
-	$(RM) pure64.sys
+	$(RM) pure64.sys $(bootsectors)
 
 .PHONY: test
 test: all
@@ -34,7 +37,9 @@ test: all
 .PHONY: install
 install: all
 	mkdir -p $(install_dir)
+	mkdir -p $(install_dir)/bootsectors
 	cp pure64.sys $(install_dir)
 	cp pure64.lst $(install_dir)
+	cp -R $(bootsectors) $(install_dir)/bootsectors
 
 $(V).SILENT:
